Fix text wrapping in basin coding alphabet textarea

--- a/misc/basin-coding/style.css
+++ b/misc/basin-coding/style.css
@@ -18,6 +18,6 @@ button {
     height: 6vh;
 }
 
-#encoded-text {
+#encoded-text, #alphabet-text {
     word-break: break-all;
 }
